# nmpde-projects

./: .gitignore  CMakeLists.txt  README.md
include/: CardiacProblem.hpp  IonicModel.hpp
src/: CardiacProblem.cpp  main.cpp
